# Bigdata-homework

./: .gitignore  README.md  _debug_overview.html  pyproject.toml
.claude/: settings.local.json
data/: city_coordinates.json
scripts/: generate_data.py
src/airscope/: __main__.py  app.py
src/airscope/charts/: bridge.py  theme.py
src/airscope/charts/templates/: base.html
src/airscope/data/: loader.py  models.py  processor.py
src/airscope/pages/: base_page.py  geo_map.py  health.py  overview.py  pollutant.py  ranking.py  trends.py
src/airscope/ui/: filter_bar.py  main_window.py  sidebar.py  styles.py
src/airscope/utils/: aqi.py  config.py
