[project]
name = "airscope"
version = "1.0.0"
description = "中国城市空气质量监测可视化大屏"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.6.0",
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    "requests>=2.31.0",
]

[project.scripts]
airscope = "airscope.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/airscope"]
